--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -1,6 +1,115 @@
 body {
   border-top: 10px solid #00A9E5;
 }
+
+//Admin Panel
+
+h1 {
+  text-align: center;
+}
+
+div {
+  &.ordersWrapper {
+    border: 1px solid #e8e8e8;
+    border-radius: 8px;
+    margin-top: 20px;
+    margin-bottom: 200px;
+
+    .orderHeader {
+      text-align: center;
+      color: #00A9E5;
+      margin-bottom: 40px;
+      padding-top: 30px;
+    }
+
+    .ordersList {
+      text-align: center;
+      ul {
+        list-style: none;
+        font-size: 14px;
+        padding: 0 20px;
+
+        li {
+
+          .orderContainer {
+            table {
+              tr {
+                display: inline-block;
+                margin-bottom: 10px;
+                padding-bottom: 10px;
+                border-bottom: 2px solid #e8e8e8;
+                td {
+                  padding-right: 10px;
+
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.adminStatus {
+  position: fixed;
+  right: 30px;
+  top: 25px;
+  font-size: 24px;
+  z-index: 1;
+}
+
+.signOutLink {
+  // position:absolute;
+  // bottom: 10px;
+  // right: 10px;
+  text-align: right;
+  margin: 0 20px 10px 0;
+}
+
+// .adminPanelLink {
+//   position:fixed;
+//   bottom: 100px;
+//   right: 100px;
+// }
+
+.adminWrapper {
+  margin-top: 0px;
+}
+
+.addProductForm {
+  width: 400px;
+  margin: 20px auto 200px auto;
+  padding-bottom: 30px;
+  border: 1px solid #e8e8e8;
+  border-radius: 8px;
+
+  h1 {
+    text-align: center;
+    color: #00A9E5;
+    margin-bottom: 30px;
+    margin-top: 50px;
+  }
+
+  div {
+    width: 300px;
+    margin-left: 50px;
+    margin-bottom: 10px;
+
+    input {
+      width: 100%;
+      // margin-left: 50px;
+    }
+
+    textarea {
+      width: 100%;
+      height: 26px;
+      resize: none;
+    }
+  }
+}
+//Products Index Page//
+
 section {
   &.hero {
     div {
@@ -14,13 +123,14 @@ section {
 
         h1 {
           font-size: 64px;
-          margin-bottom: 60px;
-          margin-top: 0px;
+          margin: 0 0 60px 165px;
           color: #00A9E5;
         }
 
         p {
           font-size: 22px;
+          width: 70%;
+          margin: 0 auto;
         }
       }
     }
@@ -51,7 +161,7 @@ section {
                   &.productOverlay {
                     position: absolute;
                     height: 100%;
-                    width: 95%;
+                    width: 90%;
                     border-radius: 10px;
                     padding-top: 50%;
                     background-color: rgba(255, 255, 255, .7);
@@ -142,5 +252,57 @@ div {
 
   .wanker-content img {
     border-radius: 15px;
+    margin-bottom: 1em;
+  }
+}
+
+.scrollToTop {
+  width:100px;
+  height:60px;
+  margin-bottom: 70px;
+  padding:10px;
+  text-align:center;
+  font-weight: bold;
+  text-decoration: none;
+  position:fixed;
+  right:30px;
+  bottom: 0px;
+  display:none;
+
+  .fa-arrow-circle-up {
+    font-size: 72px;
+    color:#00A9E5;
+
+    &:hover {
+      color: lighten(#00A9E5, 10%)
+    }
+
+  }
+}
+
+.scrollToTopShow {
+  display: block;
+}
+.scrollToTop:hover{
+  text-decoration:none;
+}
+
+.form {
+  width: 350px;
+  margin: 0 auto;
+  margin-top: 100px;
+  text-align: center;
+  border: 1px solid #00A9E5;
+}
+
+.homeBtn {
+  position: absolute;
+  left: 10px;
+  top: 20px;
+}
+@media screen and (max-width: 768px) {
+  .scrollToTop {
+    right: -10px;
+    bottom: 10px;
   }
 }
