create orders is broken

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -6,7 +6,7 @@
     <a href="/">Homepage</a>
   </div>
 
-  <div class="adminWrapper col-md-10 col-md-offset-1">
+  <div class="adminWrapper col-md-12">
     <ul class="nav nav-tabs" role="tablist">
       <li class="active"><a href="#orderlist" role="tab" data-toggle="tab">All Orders</a></li>
       <li><a href="#neworder" role="tab" data-toggle="tab">Add Product</a></li>
@@ -46,7 +46,7 @@
 
     </div>
       <div class="tab-pane fade" id="neworder">
-        <div class="addProductForm">
+        <div class="form">
           <%= render "partials/add_product_form"%>
         </div>
       </div>
