--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -12,7 +12,6 @@ div {
   &.ordersWrapper {
     border: 1px solid #e8e8e8;
     border-radius: 8px;
-    margin-top: 20px;
     margin-bottom: 200px;
 
     .orderHeader {
@@ -75,11 +74,19 @@ div {
 
 .adminWrapper {
   margin-top: 0px;
+
+  ul {
+    &.nav {
+      width: 225px;
+      margin: 0 auto;
+      border: none;
+    }
+  }
 }
 
-.addProductForm {
+.form {
   width: 400px;
-  margin: 20px auto 200px auto;
+  margin: 0px auto 200px auto;
   padding-bottom: 30px;
   border: 1px solid #e8e8e8;
   border-radius: 8px;
@@ -106,6 +113,20 @@ div {
       height: 26px;
       resize: none;
     }
+  }
+}
+
+.loginForm {
+  margin-top: 40px;
+  width: 500px;
+  margin-bottom: 400px;
+
+  h1 {
+    margin-top: 20px;
+  }
+
+  div {
+    width: 400px;
   }
 }
 //Products Index Page//
@@ -287,13 +308,6 @@ div {
   text-decoration:none;
 }
 
-.form {
-  width: 350px;
-  margin: 0 auto;
-  margin-top: 100px;
-  text-align: center;
-  border: 1px solid #00A9E5;
-}
 
 .homeBtn {
   position: absolute;
