create orders is broken

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -32,7 +32,7 @@
                       <td>Product_ID: <%= order.product_id %></td>
                       <td>Name: <%= order.full_name %></td>
                       <td>Email: <%= order.email %></td>
-                      <td>CC#: <%= order.creditcard.truncate(4) %></td>
+                      <td>CC#: <%= order.creditcard %></td>
                       <td>Expiration Date: <%= order.expiration_date %></td>
                     </tr>
                   </table>
