--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -8,6 +8,12 @@ h1 {
   text-align: center;
 }
 
+.fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
 div {
   &.ordersWrapper {
     border: 1px solid #e8e8e8;
@@ -59,18 +65,9 @@ div {
 }
 
 .signOutLink {
-  // position:absolute;
-  // bottom: 10px;
-  // right: 10px;
   text-align: right;
   margin: 0 20px 10px 0;
 }
-
-// .adminPanelLink {
-//   position:fixed;
-//   bottom: 100px;
-//   right: 100px;
-// }
 
 .adminWrapper {
   margin-top: 0px;
@@ -88,7 +85,7 @@ div {
   width: 400px;
   margin: 0px auto 200px auto;
   padding-bottom: 30px;
-  border: 1px solid #e8e8e8;
+  border: 2px solid #e8e8e8;
   border-radius: 8px;
 
   h1 {
@@ -117,9 +114,9 @@ div {
 }
 
 .loginForm {
-  margin-top: 40px;
+  margin-top: 150px;
   width: 500px;
-  margin-bottom: 400px;
+  margin-bottom: 280px;
 
   h1 {
     margin-top: 20px;
@@ -133,6 +130,12 @@ div {
 
 section {
   &.hero {
+    // background-color: black;
+    background-image: url("https://s3-us-west-2.amazonaws.com/launchpadyardsale/chicagobw.jpg");
+    width: 100%;
+    padding: 0;
+    border-bottom: 4px solid #00A9E5;
+
     div {
       &.heroWrapper {
         padding-top: 60px;
@@ -144,7 +147,7 @@ section {
 
         h1 {
           font-size: 64px;
-          margin: 0 0 60px 165px;
+          margin: 0 0 60px 0;
           color: #00A9E5;
         }
 
@@ -152,6 +155,27 @@ section {
           font-size: 22px;
           width: 70%;
           margin: 0 auto;
+        }
+      }
+    }
+  }
+
+  &#intro {
+    background-color: #e8e8e8;
+    width: 100%;
+
+    div {
+      &.introContainer {
+
+
+        p {
+          text-align: left;
+          width: 800px;
+          margin: 0 auto;
+          padding-top: 40px;
+          padding-bottom: 40px;
+          font-size: 24px;
+          line-height: 2em;
         }
       }
     }
@@ -233,6 +257,12 @@ section {
         }
       }
     }
+  }
+}
+
+div {
+  &.form {
+
   }
 }
 
