--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,23 +1,30 @@
-<div class="container">
 
-  <section class="hero row">
-    <div class="heroWrapper col-md-10 col-md-offset-1">
-      <%= image_tag('https://s3-us-west-2.amazonaws.com/launchpadyardsale/lplab.png', :class => "img-responsive") %>
-      <h1>Yard Sale!</h1>
-      <p>The guys here at LaunchPad Lab are moving up in the world and relocating to the trendy River North neighborhood. We don't have room for all of our old desks and chairs. Would you kindly purchase our Scandinavian made stuff?</p>
+  <section class="hero">
+    <div class="row">
+      <div class="heroWrapper col-md-10 col-md-offset-1">
+        <%= image_tag('https://s3-us-west-2.amazonaws.com/launchpadyardsale/lplab.png', :class => "img-responsive") %>
+        <h1>Yard Sale!</h1>
+      </div>
     </div>
   </section>
 
+  <section id="intro">
+    <div class="introContainer row">
+      <p>
+        The guys here at LaunchPad Lab are moving up in the world and relocating to the trendy River North neighborhood. We don't have room for all of our old desks and chairs. Would you kindly purchase our Scandinavian made stuff?
+      </p>
+    </div>
+  </section>
+
+<div class="container">
   <section class="productGrid row">
     <div class="productWrapper col-md-10 col-md-offset-1">
       <ul>
         <% @products.each do |product| %>
           <li>
             <div class="productContainer col-md-3 col-sm-6">
-              <div class="productOverlay">
-                <!-- <a href="" class="btn btn-primary btn-lg blue-btn" data-toggle="modal" data-target=".bs-modal-sm">Purchase</a> -->
-                <%= button_to 'Purchase', "/orders/new", class: 'btn btn-primary btn-lg blue-btn' %>
-
+              <div class="productOverlay" style="height: 272px;">
+                <%= link_to 'Purchase', new_order_path(product_id: product.id), class: 'btn btn-primary btn-lg blue-btn' %>
               </div>
               <%= image_tag(product.image_url, :class => "img-responsive") %>
               <div class="productInfo">
