--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -81,12 +81,35 @@ div {
   }
 }
 
+// FORMS
+.newOrderForm {
+  text-align: center;
+  font-size: 18px;
+
+  input[type="text"] {
+    text-align: center;
+  }
+
+  input[type="submit"] {
+    margin-top: 30px;
+    border: none;
+    background-color: #00A9E5;
+    color: white;
+    padding: 10px 40px;
+
+    &:hover {
+      box-shadow: 2px 2px 2px gray;
+    }
+  }
+}
+
 .form {
   width: 400px;
   margin: 0px auto 200px auto;
   padding-bottom: 30px;
-  border: 2px solid #e8e8e8;
-  border-radius: 8px;
+  border: 3px solid #e8e8e8;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
 
   h1 {
     text-align: center;
@@ -118,6 +141,12 @@ div {
   width: 500px;
   margin-bottom: 280px;
 
+.homeBtn {
+  position: absolute;
+  left: 10px;
+  top: 20px;
+}
+
   h1 {
     margin-top: 20px;
   }
@@ -126,11 +155,11 @@ div {
     width: 400px;
   }
 }
-//Products Index Page//
+
+//Products Index Page
 
 section {
   &.hero {
-    // background-color: black;
     background-image: url("https://s3-us-west-2.amazonaws.com/launchpadyardsale/chicagobw.jpg");
     width: 100%;
     padding: 0;
@@ -141,14 +170,20 @@ section {
         padding-top: 60px;
         text-align: center;
 
-        img {
-          margin: 0 auto;
-        }
+        div {
+          &.heroBackground {
+            width: 50%;
+            margin: 0 auto;
+            img {
+              margin: 0 auto;
+            }
 
-        h1 {
-          font-size: 64px;
-          margin: 0 0 60px 0;
-          color: #00A9E5;
+            h1 {
+              font-size: 64px;
+              margin: 0 0 60px 0;
+              color: #00A9E5;
+            }
+          }
         }
 
         p {
@@ -266,10 +301,8 @@ div {
   }
 }
 
+//WANKER JS
 div {
-  &.modal {
-    margin-top: 200px;
-  }
 
   &.wanker {
     box-sizing: border-box;
@@ -338,12 +371,6 @@ div {
   text-decoration:none;
 }
 
-
-.homeBtn {
-  position: absolute;
-  left: 10px;
-  top: 20px;
-}
 @media screen and (max-width: 768px) {
   .scrollToTop {
     right: -10px;
