--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,21 +1,21 @@
 <div class="container">
-  <div class="form">
+  <div class="form newOrderForm">
 
     <h1>Checkout</h1>
 
     <%= form_tag(orders_url, method: 'post') do %>
-      <%= hidden_field_tag :product_id, :value => params[:product_id] %>
+      <%= hidden_field_tag :product_id, params[:product_id] %>
 
-      <%= label_tag :full_name %>:
+      <%= label_tag :full_name %>:<br/>
       <%= text_field_tag :full_name %><br/>
 
-      <%= label_tag :email %>:
+      <%= label_tag :email %>:<br/>
       <%= email_field_tag :email %><br/>
 
-      <%= label_tag :creditcard %>:
+      <%= label_tag :creditcard %>:<br/>
       <%= text_field_tag :creditcard %><br/>
 
-      <%= label_tag :expiration_date %>:
+      <%= label_tag :expiration_date %>:<br/>
       <%= date_field_tag :expiration_date %><br/>
 
       <%= submit_tag "Submit Order" %>
