--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,8 +2,10 @@
   <section class="hero">
     <div class="row">
       <div class="heroWrapper col-md-10 col-md-offset-1">
-        <%= image_tag('https://s3-us-west-2.amazonaws.com/launchpadyardsale/lplab.png', :class => "img-responsive") %>
-        <h1>Yard Sale!</h1>
+        <div class="heroBackground">
+          <%= image_tag('https://s3-us-west-2.amazonaws.com/launchpadyardsale/lplab.png', :class => "img-responsive") %>
+          <h1>Yard Sale!</h1>
+        </div>
       </div>
     </div>
   </section>
@@ -43,38 +45,5 @@
   </section>
 
   <a href="#" class="scrollToTop"><i class="fa fa-arrow-circle-up"></i></a>
-
-
-  <div class="modal fade bs-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-sm">
-      <div class="modal-content">
-        <div class="modal-header">
-          <p>
-            Purchase this product
-          </p>
-        </div>
-        <div class="modal-body">
-
-          <%= form_tag(orders_url, method: 'post') do %>
-
-            <%= label_tag :full_name %>:
-            <%= text_field_tag :full_name %><br/>
-
-            <%= label_tag :email %>:
-            <%= email_field_tag :email %><br/>
-
-            <%= label_tag :creditcard %>:
-            <%= text_field_tag :creditcard %><br/>
-
-            <%= label_tag :expiration_date %>:
-            <%= date_field_tag :expiration_date %><br/>
-
-          <%= submit_tag "Submit Order" %>
-        <% end %>
-
-        </div>
-      </div>
-    </div>
-  </div>
 
 </div>
